--- a/Application/Home/View/Public/head_js.html
+++ b/Application/Home/View/Public/head_js.html
@@ -14,6 +14,7 @@
 	$(".smallnav a").mouseenter(
 		function(){
 			$(this).css("color","#999")
+    // <!-- create by cm -->
 		}
 	).mouseleave(
 		function(){
