--- a/Application/Home/View/Result/add.html
+++ b/Application/Home/View/Result/add.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/signup.css">
-    <script src="__PUBLIC__/js/jquery.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/signup.css">
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
 </head>
 <body>
     <include file="Public/nav" />
@@ -34,7 +35,7 @@
             </div>
              <div class="line" id="team">
                 <label for="team_name">团队名称 </label>
-                <input class="line-input" type="text" name="team_name" id="team_name"><span class="must">独立开发不用填写</span>
+                <input class="line-input" type="text" name="team_name" id="team_name"><span id="nameError" class="must">独立开发不用填写</span>
             </div>
             <div class="line">
                 <label for="end_time">完成日期 </label>
@@ -69,10 +70,6 @@
                 <label for="techTarget">技术指标</label>
                 <textarea name="tech_target" id="techTarget"></textarea>
             </div>
-            <div class="line textarea">
-                <label for="otherInfo">其他介绍</label>
-                <textarea name="other_info" id="otherInfo"></textarea>
-            </div>
             <input type="hidden" name="add" value="1">
             <div class="sub" >
                 <input type="submit" value="提交" />
@@ -84,6 +81,36 @@
 </body>
 <script>
     $(function($){
+        $('#team_name').change(function(event){
+            if($('#team_name').val() != ""){
+                var teamname = $('#team_name').val();
+                $.ajax({
+                    type:"post",
+                    url:"__ROOT__/index.php/Public/checkName",
+                    dataType:'json',
+                    data:{teamname:teamname}
+                    })
+                .done(function(data) {
+                    console.log("success",data);
+                    if(data.code == 1){
+                        $('#nameError').html("*");
+                        $('input[type=submit]').show();
+                    }else{
+                        $("#nameError").html("用户名已存在");
+                        $('input[type=submit]').hide();
+                    }
+                })
+                .fail(function(XMLHttpRequest, textStatus, errorThrown){
+                    console.log("status = "+XMLHttpRequest.status);  // 200
+                    console.log("readyState = "+XMLHttpRequest.readyState); //4
+                    console.log("textStatus = "+textStatus);  //parsererror
+                })
+                .always(function() {
+                    console.log("complete");
+                });
+            }
+        });
+
         $('#logo').change(function(event) {
             event.preventDefault();
             var $file = $(this);
