--- a/Application/Home/View/Signup/signup.html
+++ b/Application/Home/View/Signup/signup.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台档</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <script type="text/javascript">
         function MM_swapImgRestore() { //v3.0
             var i,x,a=document.MM_sr; 
@@ -64,6 +65,7 @@
             border-top-right-radius: 5px;
             border-top-left-radius: 5px;
             margin:40px auto; 
+            margin-bottom: 350px; 
         }
         #tip{
             background-color: #309DFF;
@@ -97,6 +99,7 @@
             font-size: 20px;
             color: white;
             border-radius: 10px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -111,7 +114,7 @@
             <a href="{:U('Signup/signup_company')}">
                 <img src="__PUBLIC__/images/signup_company.gif" alt="" />
             </a>
-            <a href="{:U('Signup/signup_other')}">
+            <a href="{:U('Signup/signup_person')}">
                 <img src="__PUBLIC__/images/signup_other.gif" alt="" />
             </a>
         </div>
