--- a/Application/Home/View/Demand/demandlist.html
+++ b/Application/Home/View/Demand/demandlist.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 <head>
+    <!-- create by cm -->
     <script src="__PUBLIC__/js/jquery.js"></script>
-    <link href="__PUBLIC__/css/nav.css" rel="stylesheet" type="text/css">
-    <link href="__PUBLIC__/css/listpage.css" rel="stylesheet" type="text/css">
+    <link href="__PUBLIC__/css/home/nav.css" rel="stylesheet" type="text/css">
+    <link href="__PUBLIC__/css/home/listpage.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <title>张家港工程项目协同创新服务平台</title>
     <style>
@@ -93,7 +94,7 @@
                         </span>
                         <span>&nbsp;{$list.publish_time}</span>
                         <?php if (session('uid')): ?>
-                            <a id="linkbutton" href="{:U('Public/link',array('id'=>$list['demand_id'],'linkType'=>3,'title'=>$list['title']))}" target="_black">
+                            <a id="linkbutton" href="{:U('Public/link',array('id'=>$list['demand_id'],'linkType'=>3))}" target="_black">
                                 <button>我要联系</button>
                             </a>
                         <?php else: ?>
