--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,61 +1,15 @@
 <!doctype html>
 <html>
 <head>
+    <!-- create by cm -->
     <meta charset="utf-8"> 
     <script src="__PUBLIC__/js/jquery.js"></script>
-    <link href="__PUBLIC__/css/css.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link href="__PUBLIC__/css/home/index.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <title>张家港工程项目协同创新服务平台</title>
-    <style>
-        #banner-show{
-            margin: 0 auto;
-            position: relative;
-            top: -3px;
-            width: 100%;
-            height: 400px;
-            overflow: hidden;
-        }
-        #banner-container{
-            width: 5760px;
-            position: absolute;
-            left: 0;
-            top: 0;
-        }
-        #banner-container ul{
-            list-style-type: none;
-            float: left;
-        }
-        #banner-container ul li{
-            float: left;
-            max-width:1920px;
-            /*width: 100%;*/
-            min-width: 1100px;
-            height: 400px;
-        }
-        #banner-container img{
-            max-width: 1920px;
-            min-width: 1100px;
-            width: 100%;
-        }
-        .control{
-            position: absolute;
-            left: 50%;
-            margin-left: -65px;
-            top: 350px;
-        }
-        .control-btn{
-            float: left;
-            width: 13px;
-            height: 13px;
-            margin-left: 13px;
-            border: 1px solid transparent;
-            border-radius: 50%; 
-            background: white;
-        }
-        .focus{
-            background: blue;
-        }
-    </style>
+
+        <script src="__PUBLIC__/assets/ie-emulation-modes-warning.js"></script>
+
 </head>
 
 <body>
@@ -122,13 +76,48 @@
             <div class="columnmain">2</div>
             <div class="columnmain">3</div>
             <div class="columnmain">4</div>
-
+            
         </div>
     </div>
+
+
+        <label class="col-xs-2 control-label" for="content">报告目录:</label>
+        <div class="col-xs-10">
+            <textarea name="content" id="content" required="required">{$info.content}</textarea>
+        </div>
+
     <include file = "Public/footer"/>
 
+
+        <js href="__PUBLIC__/ueditor/ueditor.config.js" />
+        <js href="__PUBLIC__/ueditor/ueditor.all.min.js" />
     <script>
     $(function(){
+
+        window.UEDITOR_CONFIG.initialFrameHeight = $(document).width()*0.3;
+                window.UEDITOR_CONFIG.initialFrameWidth = $(document).width()*0.6;
+                window.UEDITOR_CONFIG.toolbars = [['fullscreen', 'customstyle', 'paragraph', 'fontfamily', 'fontsize', '|',
+                    'undo', 'redo', '|', 'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript',
+                    'removeformat', 'formatmatch', 'autotypeset', 'pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist',
+                    'insertunorderedlist', 'selectall', 'cleardoc', '|','rowspacingtop', 'rowspacingbottom', 'lineheight', '|',
+                    'indent', '|', 'justifyleft', 'justifycenter', 'justifyright', 'justifyjustify', '|', 'link', 'unlink', '|',
+                    'imagenone', 'imageleft', 'imageright', 'imagecenter', '|', 'simpleupload', 'insertimage', 'attachment', 'pagebreak', 'background', '|',
+                    'horizontal', 'date', 'time', 'wordimage', '|', 'inserttable', 'deletetable', 'insertparagraphbeforetable', 'insertrow',
+                    'deleterow', 'insertcol', 'deletecol', 'mergecells', 'mergeright', 'mergedown', 'splittocells', 'splittorows',
+                    'splittocols', 'charts', '|', 'prng eview', 'searchreplace']];
+                window.UEDITOR_CONFIG.elementPathEnabled = false;
+                var ue = UE.getEditor('content',{serverUrl :'{:U('Master/Index/ueditor')}'});
+
+
+
+
+
+
+
+
+
+
+
         function nextImg () {
             var container = $('#banner-container');
             var moveWidth = ($("#banner-container li").width())*-1;
