--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -1,71 +1,80 @@
 <!doctype html>
 <html>
 <head>
-<script src="__PUBLIC__/js/jquery.js"></script>
-<link href="__PUBLIC__/css/css.css" rel="stylesheet" type="text/css">
-
-</style>
-<meta charset="utf-8">
-<title>张家港工程项目协同创新服务平台</title>
+    <!-- create by cm -->
+    <script src="__PUBLIC__/js/jquery.js"></script>
+    <link href="__PUBLIC__/css/home/nav.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/cooperation.css">
+    <meta charset="utf-8">
+    <title>张家港工程项目协同创新服务平台</title>
 </head>
 
 <body>
     <include file="Public/nav"/>
-    <div class="bannerbox">
-    	<div class="banner">
-        	<img src="__PUBLIC__/images/newsbanner.png">   
+    
+    <div id="main">
+        <div class="position">
+            <img src="__PUBLIC__/images/download_06.png">
+            您的位置：
+            <a href="__ROOT__">首页</a>
+            <sapn>&nbsp;>&nbsp;</sapn>
+            <a href="{:U('News/newslist')}">信息咨询</a>
+            <sapn>&nbsp;>&nbsp;</sapn>
+            <?php if ($info['type'] == 0): ?>
+                <a href="#">政策法规</a>
+            <?php else: ?>
+                <a href="#"><?php echo ($info['type'] == 1)?'市场动态':'业内资讯';?></a>
+            <?php endif ?>
+            
+        </div>
+        <div class="left-list">
+            <div class="mainbtn">
+                <div class="navlist">
+                    <a href="{:U('News/newslist')}">信息咨询</a>
+                </div>
+                 <div class="navlist">
+                    <a href="{:U('News/newslist',array('type'=>3))}">政策法规</a>
+                </div>
+                <div class="navlist">
+                    <a href="{:U('News/newslist',array('type'=>1))}">市场动态</a>
+                </div>
+                <div class="navlist">
+                    <a href="{:U('News/newslist',array('type'=>2))}">业内资讯</a>
+                </div>
+            </div>
+        </div>
+        <div class="right_content">
+            <div class="title">
+                 <h2>{$info.title}</h2>
+                 <span>发布时间：{$info.publish_time}</span>&nbsp;&nbsp;
+                 <span>点击量：{$info.click}次</span>
+            </div>
+            <pre>{$info.content}</pre>
+
+            <div class="next">
+                <p>
+                    上一篇
+                        <?php if ($past): ?>
+                            ><a href="{:U('News/news',array('id'=>$past['news_id']))}">{$past.title}</a>
+                        <?php else: ?>
+                            没有了
+                        <?php endif ?>
+                </p>
+                <p>
+                    下一篇：
+                    <?php if ($next): ?>
+                        <a href="{:U('News/news',array('id'=>$next['news_id']))}">{$next.title}</a>
+                    <?php else: ?>
+                        没有了
+                    <?php endif ?>
+                    
+                </p>
+                
+            </div>
         </div>
     </div>
-    <div class="mainbox">
-    	<div class="main">
-            <div class="leftmain">
-                <div class="mainlefttitle"><img src="__PUBLIC__/images/news_03.png"></div>
-                <div class="mainbtn"></div>
-            </div>
-            <div class="rightmain">
-            	<div class="rightmaintitle">
-                	<div class="rightmaintitleleft">
-                        <img src="__PUBLIC__/images/download_09.png">
-                        行业动态
-                    </div>
-                    <div class="rightmaintitleright">
-                    	<img src="__PUBLIC__/images/download_06.png">
-                        <p>您的位置：</p>
-                        <a href="index.html">首页</a>
-                        <p>&nbsp;>&nbsp;</p>
-                        <a href="">信息咨询</a>
-                        <p>&nbsp;>&nbsp;</p>
-                        <a href="">行业动态</a>
-                    </div>
-                </div>
-                <div class="line2"></div>
-                <div class="line2"></div>
-                <div class="mainbottom"></div>
-            </div>
-    	</div>
-    </div>
+	
     <include file="Public/footer"/>
 
 </body>
-<script>
-    $(".maintext2 p a").mouseenter(
-            function(){
-            $(this).css("color","#999")
-        }
-    ).mouseleave(
-        function(){
-            $(this).css("color","#666")
-        }
-    )
-    $(".mainbottom a").mouseenter(
-            function(){
-            $(this).css("text-decoration","underline")
-        }
-    ).mouseleave(
-        function(){
-            $(this).css("text-decoration","none")
-        }
-    )
-    $(".imagebox:odd").css("margin-left","34px")
-</script>
 </html>
