--- a/Application/Home/View/Public/login.html
+++ b/Application/Home/View/Public/login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台档</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
 <script type="text/javascript">
     function MM_swapImgRestore() { //v3.0
         var i,x,a=document.MM_sr; 
@@ -125,7 +126,7 @@
                 </div>
                 <!-- 注册 -->
                 <div style="float:left; margin-left:10px;">
-                    <a href="{:U('Public/singup')}" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image','','__PUBLIC__/images/按钮4.png',1)">
+                    <a href="{:U('Signup/signup')}" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image','','__PUBLIC__/images/按钮4.png',1)">
                         <img src="__PUBLIC__/images/按钮3.png" width="135" height="43" id="Image" />
                     </a> 
                 </div>
