--- a/Application/Home/View/Signup/forgetPwd_step1.html
+++ b/Application/Home/View/Signup/forgetPwd_step1.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <title>张家港工程项目协同创新服务平台</title>
     <style>
         .main{
             width:350px;
-            height: 500px;
+            min-height: 600px;
             margin:0 auto;
             margin-top: 30px;            
         }
