--- a/Application/Home/View/Team/add.html
+++ b/Application/Home/View/Team/add.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/signup.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/signup.css">
     <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">    
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">    
 </head>
 <body>
     <include file="Public/nav" />
@@ -30,8 +31,10 @@
                                 console.log("success",data);
                                 if(data.code == 0){
                                     $('#nameError').html("*");
+                                    $('input[type=submit]').show();
                                 }else{
-                                    $("#nameError").html("团队名已存在");
+                                    $("#nameError").html("用户名已存在");
+                                    $('input[type=submit]').hide();
                                 }
                             })
                             .fail(function(XMLHttpRequest, textStatus, errorThrown){
