--- a/Application/Home/View/Team/teamlist.html
+++ b/Application/Home/View/Team/teamlist.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- create by cm -->
     <meta charset="utf-8">
     <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css" type="text/css">
-    <link rel="stylesheet" href="__PUBLIC__/css/listpage.css" type="text/css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css" type="text/css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/listpage.css" type="text/css">
     <title>张家港工程项目协同创新服务平台</title>
     <style>
         .info-list{
@@ -156,7 +157,7 @@
                         <!-- <p>关注度：1 </p> -->
                         <p style="margin-top:10px;">
                         <?php if (session('uid')): ?>
-                            <a href="{:U('Public/link',array('id'=>$list['teamid'] ,'linkType'=>2,'title'=>$list['teamname']))}" target="_black">
+                            <a href="{:U('Public/link',array('id'=>$list['teamid'] ,'linkType'=>2))}" target="_black">
                                 <button>我要联系</button>
                             </a>
                         <?php else: ?>
