--- a/Application/Home/View/agentstrategy.html
+++ b/Application/Home/View/agentstrategy.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="__PUBLIC__/js/jquery.min.js"></script>
-<link href="__PUBLIC__/css/css.css" type="text/css" rel="stylesheet">
-<link rel="stylesheet" href="__PUBLIC__/css/nav.css">
-<meta charset="utf-8">
-<title>代理战略</title>
+    <!-- create by cm -->
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <link href="__PUBLIC__/css/home/css.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
+    <meta charset="utf-8">
+    <title>张家港工程项目协同创新服务平台</title>
 </head>
 
 <body>
